crates/service/tests/references/snapshots/features__references__data__def_ident_idx-2.snap
---
source: crates/service/tests/references/data.rs
expression: exclude_decl
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 4,
        "character": 16
      },
      "end": {
        "line": 4,
        "character": 21
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 5,
        "character": 18
      },
      "end": {
        "line": 5,
        "character": 23
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 6,
        "character": 22
      },
      "end": {
        "line": 6,
        "character": 27
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 7,
        "character": 21
      },
      "end": {
        "line": 7,
        "character": 26
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 8,
        "character": 14
      },
      "end": {
        "line": 8,
        "character": 19
      }
    }
  }
]
